# ai-gene-curation

./: .copier-answers.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  jak_stat_validation_report.md  mkdocs.yml  project.justfile  publication_title_mismatches.tsv  pyproject.toml  term_label_mismatches.tsv  term_label_mismatches_new.tsv  uniprot_comparison_report.tsv
.claude/agents/: curation-manager.md  go-annotation-analyzer.md  go-quality-control.md  hallucination-detector.md  literature-review-gene.md  phenotype-curator.md  phylogenetic-paint-reviewer.md  uniprot-review.md
docs/: about.md  index.md
docs/genes/: APC.md  AXIN1.md  CTNNB1.md  DKK1.md  FZD1.md  GSK3B.md  JAK1.md  JAK2.md  JAK3.md  LEF1.md  LRP5.md  LRP6.md  SOCS1.md  SOCS2.md  SOCS3.md  STAT1.md  STAT2.md  STAT3.md  STAT4.md  STAT5A.md  STAT5B.md  STAT6.md  TCF7L2.md  TYK2.md  WNT3A.md  index.md
examples/: README.md
genes/: APC.md  AXIN1.md  CTNNB1.md  DKK1.md  FZD1.md  GSK3B.md  JAK1.md  JAK2.md  JAK3.md  LEF1.md  LRP5.md  LRP6.md  SOCS1.md  SOCS2.md  SOCS3.md  STAT1.md  STAT2.md  STAT3.md  STAT4.md  STAT5A.md  STAT5B.md  STAT6.md  TCF7L2.md  TYK2.md  WNT3A.md
genes/APC/: index.html
genes/DKK1/: index.html
genes/JAK3/: index.html
genes/LEF1/: index.html
genes/LRP6/: index.html
genes/STAT2/: index.html
genes/STAT3/: index.html
pr-preview/pr-1/: sitemap.xml
pr-preview/pr-1/genes/AXIN1/: index.html
pr-preview/pr-1/genes/STAT5B/: index.html
pr-preview/pr-1/search/: search_index.json
pr-preview/pr-2/: 404.html
pr-preview/pr-2/genes/CTNNB1/: index.html
pr-preview/pr-2/genes/FZD1/: index.html
pr-preview/pr-2/genes/GSK3B/: index.html
pr-preview/pr-2/genes/STAT4/: index.html
pr-preview/pr-2/genes/STAT6/: index.html
pr-preview/pr-3/about/: index.html
pr-preview/pr-3/genes/: index.html
pr-preview/pr-3/genes/SOCS1/: index.html
pr-preview/pr-3/genes/SOCS3/: index.html
pr-preview/pr-3/genes/STAT1/: index.html
pr-preview/pr-3/genes/TCF7L2/: index.html
pr-preview/pr-4/: sitemap.xml
project/: README.md
src/ai_gene_curation/: __init__.py  build_site.py  cache_publications.py  check_publication_titles.py  check_term_labels.py  cli.py  compare_uniprot.py  split_markdown_to_yaml.py  validate_genes.py
src/ai_gene_curation/schema/: gene_curation.yaml
src/ai_gene_curation/validators/: __init__.py  base.py  evidence_validator.py  term_validator.py  test_validators.py  tree_walker.py
templates/: gene_index.j2  gene_page.j2
tests/: __init__.py
(+7 files in other folders)
