[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "ai_gene_curation"
description = "Agentic collaborative curation of genes"
authors = [
  {name = "My Name", email = "my-name@my-org.org"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["version"]

dependencies = [
  "typer >= 0.9.0",
  "linkml-runtime >=1.9.4",
  "jinja2>=3.1.6",
  "biopython>=1.85",
  "requests>=2.31.0",
  "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mypy>=1.17.1",
    "ruff>=0.4.8",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
    "metacoder>=0.1.0",
    "oaklib>=0.6.23",
]

[project.scripts]
ai-gene-curation = "ai_gene_curation.cli:main"
check-term-labels = "ai_gene_curation.check_term_labels:main"
check-publication-titles = "ai_gene_curation.check_publication_titles:cli"
split-genes-to-yaml = "ai_gene_curation.split_markdown_to_yaml:main"
cache-publications = "ai_gene_curation.cache_publications:main"
build-site = "ai_gene_curation.build_site:main"
compare-uniprot = "ai_gene_curation.compare_uniprot:main"


# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/ai_gene_curation/datamodel/ai_gene_curation_pydantic.py",
  "src/ai_gene_curation/datamodel/ai_gene_curation.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/ai_gene_curation/datamodel/ai_gene_curation_pydantic.py",
  "src/ai_gene_curation/datamodel/ai_gene_curation.py",
]
